--- a/AoC_2022/package.json
+++ b/AoC_2022/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "day2",
+  "name": "aoc_2022",
   "version": "1.0.0",
   "description": "",
-  "main": "day2.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "node day2.js"
+    "day-1": "node --loader ts-node/esm ./day1/day1.ts",
+    "day-2": "node --loader ts-node/esm ./day2/day2.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Keenan-Nicholson/AdventOfCode/issues"
   },
-  "homepage": "https://github.com/Keenan-Nicholson/AdventOfCode#readme"
+  "homepage": "https://github.com/Keenan-Nicholson/AdventOfCode#readme",
+  "dependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
