Used functions this time for fun

--- a/2022/package.json
+++ b/2022/package.json
@@ -8,7 +8,8 @@
     "day1": "node --loader ts-node/esm ./day1/day1.ts",
     "day2": "node --loader ts-node/esm ./day2/day2.ts",
     "day3": "node --loader ts-node/esm ./day3/day3.ts",
-    "day4": "node --loader ts-node/esm ./day4/day4.ts"
+    "day4": "node --loader ts-node/esm ./day4/day4.ts",
+    "day6": "node --loader ts-node/esm ./day6/day6.ts"
   },
   "repository": {
     "type": "git",
